Fix alignment of header text overlay on about template

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -244,7 +244,7 @@ body {
     letter-spacing: 10px;
     text-transform: uppercase;
     width: auto;
-    height: 75px;
+    height: 100px;
     text-align: center;
     padding: 20px;
 }
@@ -409,6 +409,10 @@ body {
     }
 
     /* Venue Listing page */
+    .overlay-text-main {
+        height: 75px;
+    }
+    
     .container-venues {
         width: 768px;
         margin: 0 auto;
